--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             </div>
         </section>
     </main>
+    <footer>
+        <p>&copy;Lovelesh Singh</p>
+    </footer>
     <script src="srcipt.js"></script>
 </body>
 </html>
